Include remote restoration from backups on the API.
Update translations to reflect as such.

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -48,7 +48,7 @@
       "LoadBackupFile": "Restore a Backup",
       "Restore": "Restore",
       "ChangeServer": "Change Match Server",
-      "ServerChangeNote": "Please note that when you change the server you will have to go grab the latest backup from the old server and then restore if you do not want to start from scratch!! Only super admins are allowed to do this.",
+      "ServerChangeNote": "Please note that the system will attempt to restore the match from a remote backup to the new server.",
       "PauseMatch": "Pause match",
       "UnpauseMatch": "Resume match",
       "AddPlayerToServer": "Add Player to Server",
@@ -409,7 +409,7 @@
       "LoadBackupFile": "バックアップの復元",
       "Restore": "復元",
       "ChangeServer": "マッチサーバーの変更",
-      "ServerChangeNote": "サーバーを変更する際には、古いサーバーから最新のバックアップを取ってからリストアしなければならないことに注意してください。これを行うことができるのはスーパーアドミンだけです。",
+      "ServerChangeNote": "なお、システムはリモートバックアップから新サーバーへのマッチの復元を試みます。",
       "PauseMatch": "ポーズマッチ",
       "UnpauseMatch": "履歴書の一致",
       "AddPlayerToServer": "サーバーにプレイヤーを追加",
