--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -261,7 +261,8 @@
       "NewTag": "NEW",
       "Captain": "Team Captain?",
       "WhatIsCaptain": "The first captain to appear on this list will be able to cast vetoes in game. If no captain is selected, the first user on the team list is considered captain.",
-      "CharacterLimit": "Team {0} must be less than {1} characters."
+      "CharacterLimit": "Team {0} must be less than {1} characters.",
+      "Coach": "Coach"
     },
     "Teams": {
       "YourTeams": "Your teams",
@@ -622,7 +623,8 @@
       "NewTag": "ニュー",
       "Captain": "チームキャプテン？",
       "WhatIsCaptain": "このリストに最初に現れたキャプテンは、ゲーム内で拒否権を行使することができます。キャプテンが選択されていない場合、チームリストの最初のユーザーがキャプテンとみなされます。",
-      "CharacterLimit": "チーム{0}は{1}のキャラ以下でなければなりません。"
+      "CharacterLimit": "チーム{0}は{1}のキャラ以下でなければなりません。",
+      "Coach": "コーチ"
     },
     "Teams": {
       "YourTeams": "あなたのチーム",
