French translation (first version)

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -365,6 +365,372 @@
       "powered": "Powered by Steam"
     }
   },
+  "fr": {
+    "Navbar": {
+      "title": "Get5Vue",
+      "AllMatches": "Tous les matchs",
+      "MyMatches": "Mes matchs",
+      "MyTeams": "Mon équipe",
+      "AllTeams": "Toutes les équipes",
+      "CreateMatch": "Créer un Match",
+      "CreateTeam": "Créer une équipe",
+      "MyServers": "Mes Serveurs",
+      "AddServer": "Ajouter un nouveau serveur",
+      "AllSeasons": "Toutes les saisons",
+      "MySeasons": "Ma saison",
+      "Logout": "Déconnexion",
+      "DarkMode": "Action le mode sombre",
+      "PlayerLeader": "Classement des joueurs",
+      "Home": "Accueil"
+    },
+    "Login": {
+      "title": "S'identifier / S'incrire",
+      "Login": "S'identifier",
+      "Register": "S'inscrire",
+      "Info": "Assurez-vous d'avoir votre identifiant Steam 64 et un nom d'utilisateur. Exemple - 76561198025644194",
+      "SteamIdLabel": "Steam ID",
+      "UsernameLabel": "Nom d'utilisateur",
+      "PasswordLabel": "Mot de passe",
+      "OldPasswordLabel": "Ancien mot de passe",
+      "NewPasswordLabel": "Nouveau mot de passe"
+    },
+    "MatchAdmin": {
+      "AdminTools": "Admin Actions",
+      "CancelMatchConfirm": "Etes-vous sur de vouloir annuler ce match ?",
+      "SteamLabel": "Steam ID (64,32, ID3)",
+      "SteamHint": "Peut même être une URL Steam !",
+      "SteamRuleRequired": "Ce champs est requis",
+      "SteamNicknameHint": "Feel free to be whoever you want them to be!",
+      "SteamNickRule": "Le pseudo doit comporter moins de 40 caractères",
+      "AddToSpec": "Ajouter aux spectacteurs",
+      "AddTeam1": "Ajouter à l'équipe 1",
+      "AddTeam2": "Ajouter à l'équipe 2",
+      "ForfeitConfirm": "Déclarer forfait ?",
+      "ForfeitChoice": "Choisissez le vainqueur entre l'équipe 1 ou l'équipe 2.",
+      "ForfeitWinner1": "Equipe 1 gagnante",
+      "ForfeitWinner2": "Equipe 2 gagnante",
+      "RCONDialog": "Envoyer une commande RCON au serveur",
+      "SendRCON": "Envoyer une commande RCON",
+      "LoadBackupFile": "Restaurer une sauvegarde",
+      "Restore": "Restaurer",
+      "ChangeServer": "Changer le match de serveur",
+      "ServerChangeNote": "Veuillez noter que le système va tenter de restaurer le match depuis une sauvegarde distante vers le nouveau serveur.",
+      "PauseMatch": "Mettre le match en pause",
+      "UnpauseMatch": "Reprendre le match",
+      "AddPlayerToServer": "Ajouter un joueur au serveur",
+      "ListBackups": "Liste des sauvegarde",
+      "CancelMatch": "Annuler le match",
+      "ForfeitMatch": "Forfeit Match",
+      "Backup": "Sauvegarder",
+      "RCONCommand": "Commande RCON",
+      "RCONHint": "Travailler comme dans la console!",
+      "MatchRestart": "Redémarrer le match en cours",
+      "MatchRestartInfo": "Le redémarrage du match en cours va supprimer toutes les statistiques de la map. Continuer?"
+    },
+    "Match": {
+      "MatchHasBeenCancelled": "Ce match a été annulé.",
+      "MatchForfeitedBy": "La {team} a déclaré forfait pour ce match.",
+      "MatchPendingStart": "Ce match est en attente de lancement.",
+      "MessageCancelSuccess": "Match annulé avec succés.",
+      "MessageAddPlayerSuccess": "Joueur ajouté avec succés.",
+      "MessageSendCommandSuccess": "Commande envoyée avec succés.",
+      "StartTime": "Début : ",
+      "EndTime": "Fin : ",
+      "Connect": "Connexion !",
+      "GOTVConnect": "Connexion à la GOTV!"
+    },
+    "CreateMatch": {
+      "FormServer": "Selectionner un serveur",
+      "FormSeason": "Selectionner une saison",
+      "ServerSelect": "Serveur",
+      "FormDetail": "Remplissez les details du match",
+      "FormError": "Vous ne devriez pas être ici !",
+      "FormTeam1": "Equipe 1",
+      "FormTeam1Title": "Team1 Title text",
+      "FormTeam2": "Equipe 2",
+      "FormTeam2Title": "Team2 Title text",
+      "FormMatchTitle": "Match Title text",
+      "FormSeriesType": "Type de série",
+      "FormMapPool": "Map Pool",
+      "FormMapExplanation": "Si vous souhaitez avoir plus de maps, visitez votre profil utilisateur pour les gérer",
+      "FormCVARS": "CVARs",
+      "MessageRegisterSuccess": "Match enregistré avec succés.",
+      "ServerLabel": "Serveur",
+      "ServerNote": "Vous ne trouvez pas ce que vous cherchez ? Crééez-le et selectionnez le !",
+      "SeasonLabel": "Saison",
+      "SeasonNote": "Pas de saison à sélectionner ? Alors cliquez juste sur suivant !",
+      "TeamRequired": "Une équipe est requise.",
+      "TeamCannotBeEqual": "Les équipes doivent être distinctes !",
+      "BestOf": "Best of ",
+      "MapChoiceError": "Au moins une carte est requise.",
+      "MapNotEnough": "Vous devez ajouter plus de maps si vous souhaitez participer dans une serie aussi grande !",
+      "ConvarTitle": "Match ConVars",
+      "PlayersPerTeam": "Joueurs par équipe",
+      "MinPlayersReady": "Nombre Minimum de joueurs prêts",
+      "SpectatorsToReady": "# Spectateurs pour être prêt",
+      "ReadyOptions": "Options des joueurs prêts",
+      "SpectatorsList": "Liste des spectateurs",
+      "Spectators": "Spectateurs",
+      "SkipVeto": "Ignorer le véto ?",
+      "KnifeDefault": "Defaut",
+      "KnifeNever": "Pas de round au couteau",
+      "KnifeAlways": "Toujours jouer le round au couteau",
+      "MapSides": "Côté de la map pour la carte {map}",
+      "MapSidesTeam1CT": "Equipe 1 démarre en CT",
+      "MapSidesTeam2CT": "Equipe 2 démarre en CT",
+      "MapSidesKnife": "Coté décidé par un round au couteau"
+    },
+    "PlayerStats": {
+      "Kills": "Kills",
+      "Deaths": "Morts",
+      "Assists": "Assistances",
+      "FlashbangAssists": "Flashbang Assists",
+      "EnemyFlash": "Ennemis aveuglés",
+      "FriendFlash": "Equipiers aveuglés",
+      "KnifeKills": "Kills au couteau",
+      "UtilDamage": "Utility Damage",
+      "Headshot": "Tir tête",
+      "RoundsPlayed": "Manches jouées",
+      "Rating": "Rating",
+      "Suicides": "Suicides",
+      "ADR": "Moyenne de Dégâts par round",
+      "BombPlants": "Bombe(s) posées",
+      "BombDefuses": "Bombe(s) désamorcées",
+      "KDR": "KDR",
+      "FPR": "Frag Par Round",
+      "User": "Utilisateur",
+      "TeamName": "Equipe",
+      "NoStatFound": "Pas de statistiques trouvées pour le match en cours.",
+      "5kill": "Aces",
+      "4kill": "Quad Kills",
+      "3kill": "Triple Kills",
+      "2kill": "Double Kills",
+      "1kill": "Simple Kills",
+      "TotalRoundsPlayed": "Total Rounds Joués",
+      "v1": "1v1",
+      "v2": "1v2",
+      "v3": "1v3",
+      "v4": "1v4",
+      "v5": "1v5",
+      "Download": "Télécharger la Demo",
+      "KAST": "KAST",
+      "ContribScore": "Contribution Score",
+      "MVP": "MVPs",
+      "RefreshData": "Les statistiques vont être mises à jour dans {sec} secondes.",
+      "RefreshForce": "Forcer la mise à jour"
+    },
+    "Seasons": {
+      "Title": "Saisons/Tournois",
+      "New": "Nouvelle",
+      "NotFinished": "En cours",
+      "Name": "Nom",
+      "Dates": "Plage de dates",
+      "DateTitle": "Dates de la saison",
+      "CvarHint": "Ces valeurs seront utilisées par défaut pour CHAQUE match.",
+      "ID": "ID",
+      "StartTitle": "Date de début",
+      "EndTitle": "Date de fin",
+      "NewFormTitle": "Créer une nouvelle saison",
+      "EditFormTitle": "Editer les infos de la saison",
+      "SeasonCreated": "Saison créée avec succés !",
+      "SeasonUpdated": "Saison mis à jour avec succés !",
+      "SeasonDeleted": "Saison supprimée avec succés !",
+      "DeleteConfirmation": "Êtes-vous sûr de vouloir supprimer cette saison?",
+      "DeleteExplain": "Cela supprimera tous les matchs associés à cette saison.",
+      "ImportSeason": "Importer",
+      "Import": "Importer depuis Challonge",
+      "ImportExplanation": "Tournament ID (e.g. 10230) ou URL (e.g. 'single_elim' for challonge.com/single_elim). Si assigné à un sous-domaine, le format de l'URL doit être :sousdomaine-:tournament_url (e.g. 'test-mytourney' pour test.challonge.com/mytourney)",
+      "ImportUrl": "URL Challonge",
+      "ImportTeams": "Importer les équipes ?",
+      "ImportError": "Erreur durant l'import de la saison. Assurez-vous que l'URL Challonge est correcte."
+    },
+    "Matches": {
+      "YourMatches": "Vos matchs",
+      "AllMatches": "Tous les matchs",
+      "MatchID": "Match ID",
+      "Team1": "Equipe 1",
+      "Team2": "Equipe 2",
+      "Status": "Status",
+      "Server": "Serveur",
+      "Owner": "Propriétaire",
+      "DeleteButton": "Supprimer mes matchs annulés",
+      "Versus": "vs"
+    },
+    "Metrics": {
+      "Get5Metrics": "Get5 Metrics",
+      "Users": "Utilisateurs inscrits",
+      "Teams": "Equipes enregistrées",
+      "Matches": "Matchs Créés",
+      "Complete": "Matchs terminées",
+      "Servers": "Serveurs publique ajoutés",
+      "Maps": "Maps avec les statistiques enregistrées",
+      "Players": "Joueurs Uniques",
+      "Seasons": "Saisons"
+    },
+    "MyServers": {
+      "NoServersFound": "Pas de serveurs trouvés.",
+      "InUse": "Utilisé",
+      "Free": "Libre",
+      "MessageDeleteSuccess": "Serveur supprimé avec succés.",
+      "Title": "Serveurs",
+      "New": "Nouveau Serveur",
+      "Status": "Status",
+      "DeleteConfirmation": "Etes-vous sûr de vouloir supprimer ce serveur ?",
+      "ID": "Server ID",
+      "Name": "Nom affiché",
+      "Host": "Nom d'hôte",
+      "Port": "Port #",
+      "RCONPass": "Mot de passe RCON",
+      "IsPublic": "Serveur public",
+      "Owner": "Propriétaire",
+      "FormTitleNew": "Créer un nouveau serveur",
+      "FormTitleEdit": "Modifier les infos du serveur",
+      "Flag": "Emplacement",
+      "ShowPublicServers": "Montrer tous les serveurs disponibles",
+      "ShowMyServers": "Montrer mes serveurs"
+    },
+    "ServerCreate": {
+      "InfoWillNotBeExposed": "Les informations de votre serveur ne seront pas exposées aux autres utilisateurs.",
+      "Get5Help": "Assurez-vous que votre serveur est en cours d'exécution et que les plugins get5/G5API et G5WS sont installés en premier.<br>Voir <a href=\"https://github.com/splewis/get5/wiki/Step-by-step-installation-guide\">le wiki get5</a> pour de l'aide à l'installation de get5 et <a href=\"https://github.com/phlexplexico/get5-webapi\">G5WS</a> plugins. ASSUREZ-VOUS que sv_logecho = 1 et 'log on' SONT CONFIGURES SUR LE SERVEUR",
+      "FormDisplayName": "Nom affiché",
+      "FormServerIP": "Nom d'hôte",
+      "FormServerHint": "Peut aussi être une URL.",
+      "FormServerPort": "Port du serveur",
+      "FormRCONPassword": "Mot de passe RCON",
+      "FormGOTVPort": "Port de la GOTV",
+      "FormPublicServer": "Serveur public ?",
+      "MessageRegisterSuccess": "Serveur enregistré avec succés.",
+      "MessageeEditSuccess": "Serveur modifié avec succés.",
+      "NewServerTitle": "Nouveau Serveur",
+      "EditServerTitle": "Modifier Serveur",
+      "PortRangeIncorrect": "veuillez entrer un port entre 0 et 65536."
+    },
+    "Team": {
+      "Players": "Joueurs",
+      "RecentMatches": "Matchs récents",
+      "MessageDeleteSuccess": "Equipe supprimée avec succés.",
+      "DeleteConfirm": "Êtes-vous sûr de vouloir supprimer cette équipe ?",
+      "ID": "Team ID",
+      "Name": "Nom",
+      "TeamTag": "Tag",
+      "Flag": "Drapeau",
+      "Owner": "Propriétaire",
+      "NameLabel": "Nom de l'équipe",
+      "AuthLabel": "Identifiant Steam",
+      "AuthHint": "Doit être un identifiant steam. URL/Steam64/Steam32...",
+      "NickLabel": "Pseudo (facultatif)",
+      "DeleteConfirmation": "Êtes-vous sûr de bien vouloir supprimer cet élément ?",
+      "Username": "Nom en jeu",
+      "SteamIDTitle": "Steam ID",
+      "NewMember": "Nouveau membre de l'équipe",
+      "EditMember": "Ajouter/modifier un membre de l'équipe",
+      "EditInfo": "Modifier les infos de l'équipe",
+      "NewInfo": "New Team Info",
+      "NewPlayer": "Nouveau Joueur",
+      "EditPlayer": "Modifier le joueur",
+      "NewTag": "NEW",
+      "Captain": "Capitaine de l'équipe ?",
+      "WhatIsCaptain": "Le premier capitaine à figurer sur cette liste pourra opposer son veto en jeu. Si aucun capitaine n'est sélectionné, le premier utilisateur de la liste d'équipe est considéré comme capitaine.",
+      "CharacterLimit": "Equipe {0} doit être inférieur à {1} caractères.",
+      "Coach": "Coach"
+    },
+    "Teams": {
+      "YourTeams": "Vos équipes",
+      "NoTeamFound": "Aucune équipes trouvées.",
+      "ImportTeam": "Importer équipes",
+      "Title": "Equipes"
+    },
+    "User": {
+      "Name": "Nom",
+      "SteamAccount": "Compte Steam",
+      "TeamsSaved": "Equipes sauvegardées",
+      "MatchesCreated": "Matchs créés",
+      "RecentMatches": "Matchs Récents",
+      "API": "Clé API",
+      "ResetAPI": "Réinitialiser clé API",
+      "Stats": "Player Statistics",
+      "Past5": "5 derniers matchs",
+      "ClaimUser": "Connectez-vous avec un compte pour revendiquer cet utilisateur !",
+      "SuperAdmin": "Super Admin",
+      "Admin": "Admin",
+      "UserMaps": "{players}'s Maps",
+      "MapEnabled": "Activé",
+      "MapEdit": "Modifier",
+      "MapSave": "Sauver",
+      "MapDisplayName": "Nom d'affichage",
+      "MapName": "Nom de la Map",
+      "MapDeleteTitle": "Supprimer la Map?",
+      "MapDeleteExplain": "Êtes-vous sûr de vouloir supprimer {map}?",
+      "MapNew": "Nouvelle Map",
+      "ResetPass": "Réinitialiser Mot de passe",
+      "Challonge": "Clé API Challonge",
+      "ChallongeSave": "Sauver la clé Challonge"
+    },
+    "TeamCreate": {
+      "FormTeamName": "Nom de l'équipe",
+      "FormTeamTag": "Tag de l'équipe",
+      "FormLogoName": "Nom du logo",
+      "FormCountryFlag": "Drapeau du pays",
+      "FormPlayer": "Joueur",
+      "FormPublicTeam": "Equipe publique",
+      "MessageRegisterSuccess": "Equipe inscrite avec succcès.",
+      "MessageeEditSuccess": "Equipe modifiée avec succcès",
+      "TeamLogo": "Logo",
+      "TeamPreview": "Aperçu:"
+    },
+    "Veto": {
+      "NoData": "Pas de données sur le véto disponible.",
+      "VetoPick": "Choisir",
+      "VetoBan": "Bannir",
+      "DeciderTeam": "Decideur",
+      "TeamHeader": "Equipe",
+      "MapHeader": "Map",
+      "PickBan": "Choisir ou Bannir?",
+      "SidePick": "Côté choisi",
+      "RefreshData": "Donnée sur de véto mise à jour dans {sec} secondes."
+    },
+    "lang": {
+      "LanguageName": "Français",
+      "ChangeLanguage": "Language",
+      "LanguageChanged": "Vous avez changé votre langue."
+    },
+    "Leaderboard": {
+      "TTitle": "Classement des équipes",
+      "TName": "Nom de l'équipe",
+      "TWin": "Victoires",
+      "TLosses": "Défaites",
+      "TDiff": "Round Difference"
+    },
+    "misc": {
+      "Cancel": "Annuler",
+      "Confirm": "Confirmer",
+      "Close": "Fermer",
+      "Error": "Erreur",
+      "Create": "Créer",
+      "Update": "Mettre à jour",
+      "Delete": "Supprimer",
+      "No": "Non",
+      "Yes": "Oui",
+      "Required": "Ce champ est requis.",
+      "Change": "Changer",
+      "Back": "Retour",
+      "Save": "Sauver",
+      "Next": "Suivant",
+      "LoadText": "Chargement... Veuillez patienter",
+      "OK": "OK",
+      "ValueMustBeNumber": "La valeur doit être un nombre.",
+      "GreaterThanZero": "VLa valeur doit être plus supérieure à zéro.",
+      "PLeader": "Classement des joueurs",
+      "TWins": "Total de victoires",
+      "LessThan": "La date 2 doit être supérieur ou égale à la date 1.",
+      "Import": "Importer"
+    },
+    "Footer": {
+      "company": "Phlex Plexico",
+      "metrics": "Metrics",
+      "powered": "Powered by Steam"
+    }
+  },
   "jp": {
     "Navbar": {
       "title": "Get5Vue",
