--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -421,7 +421,7 @@
       "PauseMatch": "Mettre le match en pause",
       "UnpauseMatch": "Reprendre le match",
       "AddPlayerToServer": "Ajouter un joueur au serveur",
-      "ListBackups": "Liste des sauvegarde",
+      "ListBackups": "Liste des sauvegardes",
       "CancelMatch": "Annuler le match",
       "ForfeitMatch": "Déclarer forfait pour ce Match",
       "Backup": "Sauvegarder",
