--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -182,7 +182,7 @@
     "Matches": {
       "YourMatches": "Your matches",
       "AllMatches": "All matches",
-      "MatchID": "Match ID",
+      "MatchID": "Match Room",
       "Team1": "Team 1",
       "Team2": "Team 2",
       "Status": "Status",
@@ -245,7 +245,7 @@
       "RecentMatches": "Recent Matches",
       "MessageDeleteSuccess": "Successfully deleted team.",
       "DeleteConfirm": "Are you sure you wish to delete this team?",
-      "ID": "Team ID",
+      "ID": "Team Page",
       "Name": "Name",
       "TeamTag": "Tag",
       "Flag": "Flag",
@@ -549,7 +549,7 @@
     "Matches": {
       "YourMatches": "Vos matchs",
       "AllMatches": "Tous les matchs",
-      "MatchID": "Match ID",
+      "MatchID": "Match Room",
       "Team1": "Equipe 1",
       "Team2": "Equipe 2",
       "Status": "Status",
@@ -612,7 +612,7 @@
       "RecentMatches": "Matchs récents",
       "MessageDeleteSuccess": "Equipe supprimée avec succés.",
       "DeleteConfirm": "Êtes-vous sûr de vouloir supprimer cette équipe ?",
-      "ID": "Team ID",
+      "ID": "Team Page",
       "Name": "Nom",
       "TeamTag": "Tag",
       "Flag": "Drapeau",
