--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -10,8 +10,8 @@
       "CreateTeam": "Create Team",
       "MyServers": "My Servers",
       "AddServer": "Add New Server",
-      "AllSeasons": "All Tournament",
-      "MySeasons": "My Tournament",
+      "AllSeasons": "All Tournaments",
+      "MySeasons": "My Tournaments",
       "Logout": "Logout",
       "DarkMode": "Toggle Dark Mode",
       "PlayerLeader": "Player Leaderboard",
@@ -70,12 +70,12 @@
       "MessageSendCommandSuccess": "Successfully sent command.",
       "StartTime": "Start:",
       "EndTime": "End:",
-      "Connect": "Connect to Sever!",
+      "Connect": "Connect to Server!",
       "GOTVConnect": "Connect to GOTV!"
     },
     "CreateMatch": {
       "FormServer": "Select a Server",
-      "FormSeason": "Select a Season",
+      "FormSeason": "Select a Tournament",
       "ServerSelect": "Server",
       "FormDetail": "Fill Out Match Details",
       "FormError": "You should not be here!",
@@ -91,8 +91,8 @@
       "MessageRegisterSuccess": "Successfully registered match.",
       "ServerLabel": "Server",
       "ServerNote": "Not finding what you're looking for? Create it then select it!",
-      "SeasonLabel": "Season",
-      "SeasonNote": "No season to select? Then just press next!",
+      "SeasonLabel": "Tournament",
+      "SeasonNote": "No Tournament to select? Then just press next!",
       "TeamRequired": "A team is required.",
       "TeamCannotBeEqual": "Teams cannot face each other!",
       "BestOf": "Best of ",
@@ -156,22 +156,22 @@
     },
     "Seasons": {
       "Title": "Seasons/Tournaments",
-      "New": "New Season",
+      "New": "New Tournament",
       "NotFinished": "Ongoing",
       "Name": "Name",
       "Dates": "Date Range",
-      "DateTitle": "Season Dates",
+      "DateTitle": "Tournament Dates",
       "CvarHint": "These values will be brought as defaults in EVERY match.",
       "ID": "ID",
       "StartTitle": "Start Date (YYYY/MM/DD)",
       "EndTitle": "End Date (YYYY/MM/DD)",
       "NewFormTitle": "Create New Season/Tournament",
       "EditFormTitle": "Edit Season/Tournament Info",
-      "SeasonCreated": "Season inserted successfully!",
-      "SeasonUpdated": "Season updated successfully!",
-      "SeasonDeleted": "Season deleted successfully!",
-      "DeleteConfirmation": "Are you sure you wish to remove this season?",
-      "DeleteExplain": "This will remove all match associations to the season.",
+      "SeasonCreated": "Tournament inserted successfully!",
+      "SeasonUpdated": "Tournament updated successfully!",
+      "SeasonDeleted": "Tournament deleted successfully!",
+      "DeleteConfirmation": "Are you sure you wish to remove this Tournament?",
+      "DeleteExplain": "This will remove all match associations to the Tournament.",
       "ImportSeason": "Import",
       "Import": "Import From Challonge",
       "ImportExplanation": "Tournament ID (e.g. 10230) or URL (e.g. 'single_elim' for challonge.com/single_elim). If assigned to a subdomain, URL format must be :subdomain-:tournament_url (e.g. 'test-mytourney' for test.challonge.com/mytourney)",
@@ -200,7 +200,7 @@
       "Servers": "Public Servers added",
       "Maps": "Maps with stats saved",
       "Players": "Unique Players",
-      "Seasons": "Seasons"
+      "Seasons": "Tournament"
     },
     "MyServers": {
       "NoServersFound": "No servers found.",
