few css changes

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -88,7 +88,7 @@
       "FormMapPool": "Map Pool",
       "FormMapExplanation": "If you wish to have more maps, visit your user profile to add/edit/remove maps!",
       "FormCVARS": "CVARs",
-      "MessageRegisterSuccess": "Successfully registered match.",
+      "MessageRegisterSuccess": "Successfully Created match.",
       "ServerLabel": "Server",
       "ServerNote": "Not finding what you're looking for? Create it then select it!",
       "SeasonLabel": "Tournament",
@@ -187,12 +187,12 @@
       "Team2": "Team 2",
       "Status": "Status",
       "Server": "Server",
-      "Owner": "Owner",
+      "Owner": "Host",
       "DeleteButton": "Delete My Cancelled Matches",
       "Versus": "vs"
     },
     "Metrics": {
-      "Get5Metrics": "Get5 Metrics",
+      "Get5Metrics": "Metrics",
       "Users": "Registered Users",
       "Teams": "Saved Teams",
       "Matches": "Matches Created",
@@ -234,7 +234,7 @@
       "FormRCONPassword": "RCON Password",
       "FormGOTVPort": "GOTV Port",
       "FormPublicServer": "Public Server?",
-      "MessageRegisterSuccess": "Successfully registered server.",
+      "MessageRegisterSuccess": "Successfully created server.",
       "MessageeEditSuccess": "Successfully edited server.",
       "NewServerTitle": "New Server",
       "EditServerTitle": "Edit Server",
@@ -308,7 +308,7 @@
       "FormCountryFlag": "Country Flag",
       "FormPlayer": "Player",
       "FormPublicTeam": "Public Team",
-      "MessageRegisterSuccess": "Successfully registered team.",
+      "MessageRegisterSuccess": "Successfully created team.",
       "MessageeEditSuccess": "Successfully edited team.",
       "TeamLogo": "Logo",
       "TeamPreview": "Preview:"
