--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -128,7 +128,7 @@
       "RoundsPlayed": "Rounds Played",
       "Rating": "Rating",
       "Suicides": "Suicides",
-      "ADR": "Average Damage Per Round",
+      "ADR": "ADR",
       "BombPlants": "Bomb Plants",
       "BombDefuses": "Bomb Defuses",
       "KDR": "KDR",
