--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -132,7 +132,7 @@
       "BombPlants": "Bomb Plants",
       "BombDefuses": "Bomb Defuses",
       "KDR": "KDR",
-      "FPR": "Frags Per Round",
+      "FPR": "FPR",
       "User": "User",
       "TeamName": "Team",
       "NoStatFound": "No stats are found for the current match.",
@@ -499,7 +499,7 @@
       "BombPlants": "Bombe(s) posées",
       "BombDefuses": "Bombe(s) désamorcées",
       "KDR": "KDR",
-      "FPR": "Frag Par Round",
+      "FPR": "FPR",
       "User": "Utilisateur",
       "TeamName": "Equipe",
       "NoStatFound": "Pas de statistiques trouvées pour le match en cours.",
@@ -862,7 +862,7 @@
       "BombPlants": "爆弾プラント",
       "BombDefuses": "Bomb Defuses",
       "KDR": "ＫＤＲ",
-      "FPR": "Frags Per Round",
+      "FPR": "FPR",
       "User": "ユーザー",
       "TeamName": "チーム",
       "NoStatFound": "現在の試合のスタッツは見つかりませんでした。",
